<resources>
    <string name="app_name">DuckSplash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="unsplash_join_url" translatable="false">https://unsplash.com/join</string>

    <string name="photo_number">%d Photos</string>
    <string name="photo_summary_user_info">%d Photos·By %s created</string>
    <string name="search">Search</string>
    <string name="photo">Photo</string>
    <string name="unknown">Unknown</string>
    <string name="favorite">Favorite</string>
    <string name="collection">Collection</string>
    <string name="user">User</string>
    <string name="loading">Loading</string>
    <string name="initial_loading_error_tip">An error occurred, click here to retry</string>
    <string name="user_login_tip">Please login</string>
    <string name="user_login_email_placeholder">Support by author all of the world</string>
    <string name="setting">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="add_account">Add Account</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="main_slogan">Creation starts here</string>
    <string name="sub_slogan">Visit free high resolution photos that are hard to find elsewhere</string>

    <string name="ext_info_manufacturer">Manufacturer</string>
    <string name="ext_info_model">Model</string>
    <string name="ext_info_size">Size</string>
    <string name="ext_info_focal_length">Focal Length</string>
    <string name="ext_info_aperture">Aperture</string>
    <string name="shutter_time">Shutter Time</string>
    <string name="ext_info_exposure">Exposure</string>
    <string name="ext_info_color">Color</string>
    <string name="browse">Browse</string>
    <string name="download">Download</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="create_new_collection">Create New Collection</string>
    <string name="hint_collection_name">Name</string>
    <string name="hint_collection_description">Description(optional)</string>
    <string name="set_collection_private">Set Collection Private</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="name_is_required">Name is required</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="file_exists_title">Download again?</string>
    <string name="file_exists_message">This photo has already been downloaded. Do you want to download this photo again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>