<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@mipmap/ic_back"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:title="@string/add_account"/>

    <ImageView
        android:id="@+id/randomPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/createAccountButton" />

    <View
        android:id="@+id/randomPhotoMask"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/random_photo_mask"
        app:layout_constraintTop_toTopOf="@id/randomPhoto"
        app:layout_constraintLeft_toLeftOf="@id/randomPhoto"
        app:layout_constraintRight_toRightOf="@id/randomPhoto"
        app:layout_constraintBottom_toBottomOf="@id/randomPhoto" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccountButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginHorizontal="@dimen/dp60"
        android:textColor="@color/text_white"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/randomPhoto"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.MaterialComponents.Button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginVertical="@dimen/dp20"
        android:layout_marginHorizontal="@dimen/dp60"
        android:gravity="center"
        android:textColor="@color/text_black"
        app:layout_constraintTop_toBottomOf="@id/createAccountButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <TextView
        android:id="@+id/slogan1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_slogan"
        android:textSize="@dimen/sp35"
        android:textStyle="bold"
        android:textColor="@color/text_white"
        app:layout_constraintTop_toTopOf="@id/randomPhoto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/slogan2"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/slogan2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:text="@string/sub_slogan"
        android:textSize="@dimen/sp16"
        android:textColor="@color/text_white"
        app:layout_constraintTop_toBottomOf="@id/slogan1"
        app:layout_constraintLeft_toLeftOf="@id/slogan1"
        app:layout_constraintRight_toRightOf="@id/slogan1"
        app:layout_constraintBottom_toBottomOf="@id/randomPhoto"/>


</androidx.constraintlayout.widget.ConstraintLayout>