<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="@dimen/dp20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addCollectionLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/createCollectionLayout">

            <TextView
                android:id="@+id/addTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_to_collection"
                android:textSize="@dimen/sp18"
                android:textColor="@color/text_black"
                android:textStyle="bold"
                android:lines="1"
                android:ellipsize="end"
                app:layout_constraintRight_toLeftOf="@id/createIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/collectionList"/>

            <ImageView
                android:id="@+id/createIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/addTitle"
                android:src="@drawable/ic_add_24dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/collectionList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp20"
                android:clipToPadding="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addTitle"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/createCollectionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/createTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:textSize="@dimen/sp18"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/create_new_collection"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/collectionNameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_collection_name"
                app:counterEnabled="true"
                app:counterMaxLength="60"
                app:errorEnabled="true"
                android:paddingVertical="@dimen/dp10"
                app:layout_constraintTop_toBottomOf="@id/createTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_collection_description"
                app:counterEnabled="true"
                app:counterMaxLength="250"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/collectionNameTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/collectionPrivateCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/descriptionTextInputLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/set_collection_private"
                android:textSize="@dimen/sp14"
                android:textColor="@color/text_black"/>

            <Button
                android:id="@+id/createButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                app:layout_constraintTop_toBottomOf="@id/collectionPrivateCheckBox"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintTop_toBottomOf="@id/collectionPrivateCheckBox"
                app:layout_constraintRight_toLeftOf="@id/createButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>