<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/userHead"
        android:layout_width="@dimen/dp80"
        android:layout_height="@dimen/dp80"
        android:src="@mipmap/ic_default_userprofile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/dp10"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:ellipsize="end"
        android:layout_marginHorizontal="@dimen/dp10"
        android:textColor="@color/text_black"
        android:textSize="@dimen/sp16"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/userHead"
        app:layout_constraintTop_toTopOf="@id/userHead"
        app:layout_constraintBottom_toTopOf="@id/email"
        android:text="@string/user_login_tip" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:ellipsize="end"
        app:layout_constraintLeft_toLeftOf="@id/userName"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintBottom_toBottomOf="@id/userHead"
        android:text="@string/user_login_email_placeholder"
        android:textSize="@dimen/sp14"
        android:textColor="@color/text_gray" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/grey_300"
        app:layout_constraintTop_toBottomOf="@id/userHead"
        android:layout_marginTop="@dimen/dp15"/>

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/line1"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:src="@mipmap/ic_setting"
            android:layout_marginHorizontal="@dimen/dp15"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp16"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/grey_300"
        app:layout_constraintTop_toBottomOf="@id/settings"/>

    <LinearLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/settings"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:src="@mipmap/ic_about"
            android:layout_marginHorizontal="@dimen/dp15"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp16"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/grey_300"
        app:layout_constraintTop_toBottomOf="@id/about"/>

    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/about"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:src="@mipmap/ic_logout"
            android:layout_marginHorizontal="@dimen/dp15"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp16"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>