<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/app_bar_height"
    android:paddingHorizontal="@dimen/dp15"
    android:paddingBottom="@dimen/dp15">

    <ImageView
        android:id="@+id/userHead"
        android:layout_width="@dimen/dp80"
        android:layout_height="@dimen/dp80"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:id="@+id/photoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/userHead"
        app:layout_constraintLeft_toRightOf="@id/userHead"
        app:layout_constraintBottom_toBottomOf="@id/userHead"
        app:layout_constraintRight_toLeftOf="@id/favoriteButton">

        <TextView
            android:id="@+id/photoCount"
            style="@style/UserInfoCount"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/photoHold"
            style="@style/UserInfoHold"
            app:layout_constraintTop_toBottomOf="@id/photoCount"
            app:layout_constraintBottom_toBottomOf="@id/userHead"
            app:layout_constraintLeft_toRightOf="@id/userHead"
            app:layout_constraintRight_toLeftOf="@id/favoriteHold"
            android:text="@string/photo"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/favoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@id/photoButton"
        app:layout_constraintRight_toLeftOf="@id/collectionButton"
        app:layout_constraintTop_toTopOf="@id/photoButton"
        android:orientation="vertical">

        <TextView
            android:id="@+id/favoriteCount"
            style="@style/UserInfoCount"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/favoriteHold"
            style="@style/UserInfoHold"
            android:text="@string/favorite"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/collectionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/favoriteButton"
        app:layout_constraintLeft_toRightOf="@id/favoriteButton"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/collectionCount"
            style="@style/UserInfoCount"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/collectionHold"
            style="@style/UserInfoHold"
            android:text="@string/collection"/>

    </LinearLayout>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:ellipsize="end"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="@dimen/sp14"
        android:textColor="@color/text_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userHead"
        android:layout_marginTop="@dimen/dp10"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:ellipsize="end"
        android:text="@string/app_name"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/sp14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName"
        android:layout_marginTop="@dimen/dp5"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/sp14"
        android:textColor="@color/text_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location"
        android:layout_marginTop="@dimen/dp10"/>


</androidx.constraintlayout.widget.ConstraintLayout>